chat page modified

--- a/project/app/src/main/res/layout/activity_chat_nav.xml
+++ b/project/app/src/main/res/layout/activity_chat_nav.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#3872AA"
+        android:background="#4e63a6"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,6 +27,7 @@
         android:layout_marginBottom="60dp"
         android:layout_weight="4"
         android:keepScreenOn="false"
+        android:background="#e2cc5d"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="parent"
         android:textIsSelectable="true"
