--- a/project/app/src/main/res/layout/chat_location.xml
+++ b/project/app/src/main/res/layout/chat_location.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:Android="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    Android:cardBackgroundColor="#E2CC5D"
+    Android:cardElevation="0dp"
+    Android:cardMaxElevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/message_bg"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/sendName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="200dp"
             android:text="Username"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="#2941C8" />
 
         <Button
@@ -21,12 +28,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="200dp"
-            android:onClick="showMap"/>
+            android:onClick="showMap" />
 
         <TextView
             android:id="@+id/sendTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="200dp"
             android:text="TextView"
             android:textColor="#7A7A7A" />
     </LinearLayout>
