--- a/project/app/src/main/res/layout/chat_message.xml
+++ b/project/app/src/main/res/layout/chat_message.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:Android="http://schemas.android.com/apk/res-auto"
     android:id="@+id/window"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textIsSelectable="true"
     android:adjustViewBounds="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:textIsSelectable="true"
+    Android:cardBackgroundColor="#E2CC5D"
+    Android:cardElevation="0dp"
+    Android:cardMaxElevation="0dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/message_bg"
             android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/sendName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxWidth="200dp"
                     android:text="Username"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="#2941C8" />
 
                 <TextView
                     android:id="@+id/sendMessage"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxWidth="200dp"
                     android:text="TextView"
-                    android:textIsSelectable="true"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                    android:textIsSelectable="true" />
 
                 <TextView
                     android:id="@+id/sendTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxWidth="200dp"
                     android:text="TextView"
                     android:textColor="#7A7A7A" />
         </LinearLayout>
