--- a/project/app/src/main/res/layout/activity_channel.xml
+++ b/project/app/src/main/res/layout/activity_channel.xml
@@ -45,7 +45,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:onClick="toPost1"
-            android:text="Technology"
+            android:text="① Technology"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
 
@@ -55,7 +55,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:onClick="toPost2"
-            android:text="Digital"
+            android:text="② Digital"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
@@ -74,7 +74,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:onClick="toPost3"
-            android:text="Life"
+            android:text="③ Life"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
 
@@ -84,7 +84,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:onClick="toPost4"
-            android:text="Fashion"
+            android:text="④ Fashion"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
@@ -103,7 +103,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:onClick="toPost5"
-            android:text="Food"
+            android:text="⑤ Food"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
 
@@ -113,7 +113,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:onClick="toPost6"
-            android:text="Film &#038; TV"
+            android:text="⑥ Film &#038; TV"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
@@ -133,7 +133,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:onClick="toPost7"
-            android:text="Game"
+            android:text="⑦ Game"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
 
@@ -143,7 +143,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:onClick="toPost8"
-            android:text="Animation &#038; Comic"
+            android:text="⑧ Animation &#038; Comic"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
@@ -163,7 +163,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:onClick="toPost9"
-            android:text="Tourism"
+            android:text="⑨ Tourism"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
 
@@ -173,7 +173,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:onClick="toPost10"
-            android:text="Photography"
+            android:text="⑩ Photography"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
