map button bug fixed

--- a/project/app/src/main/res/layout/fragment_friendlist.xml
+++ b/project/app/src/main/res/layout/fragment_friendlist.xml
@@ -15,8 +15,10 @@
 
         <ListView
             android:id="@+id/item"
+            android:background="#b98a16"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:listSelector="@drawable/friendlist_item">
 
         </ListView>
     </LinearLayout>
