--- a/project/app/src/main/res/layout/activity_map_points.xml
+++ b/project/app/src/main/res/layout/activity_map_points.xml
@@ -1,9 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".map_points">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_myPoints"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:background="#3872AA"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Checked" />
+
+    <ListView
+        android:id="@+id/lv_ofcPoi"
+        android:layout_width="match_parent"
+        android:layout_height="204dp"
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="My Palaces" />
+
+    <ListView
+        android:id="@+id/lv_myPoi"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="7" />
+
+</LinearLayout>
