--- a/project/app/src/main/res/layout/activity_new_post.xml
+++ b/project/app/src/main/res/layout/activity_new_post.xml
@@ -28,14 +28,16 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 
+
     <LinearLayout
-        android:id="@+id/linearLayout4"
+        android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:orientation="horizontal"
+        android:layout_marginTop="170dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/title">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
         <EditText
             android:id="@+id/post_title"
             android:layout_width="wrap_content"
@@ -44,26 +46,26 @@
             android:hint="Title"
             android:inputType="text"
             tools:layout_editor_absoluteY="180dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
         <EditText
             android:id="@+id/post_content"
             android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_height="150dp"
             android:ems="10"
             android:hint="Content"
             android:inputType="textMultiLine"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_username_modify"
             tools:layout_editor_absoluteY="250dp" />
+        <Button
+            android:id="@+id/openFile"
+            android:layout_width="wrap_content"
+            android:text="Choose image from album"
+            android:layout_height="wrap_content"/>
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/image"/>
+
     </LinearLayout>
 
     <LinearLayout
