--- a/project/app/src/main/res/layout/activity_post_display.xml
+++ b/project/app/src/main/res/layout/activity_post_display.xml
@@ -46,13 +46,23 @@
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="150dp"/>
 
-        <TextView
-            android:id="@+id/post_content"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="210dp"/>
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/post_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="TextView"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="210dp"/>
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
 
     </LinearLayout>
     <LinearLayout
