--- a/project/app/src/main/res/layout/fragment_modify.xml
+++ b/project/app/src/main/res/layout/fragment_modify.xml
@@ -44,6 +44,7 @@
 
         <RadioButton
             android:id="@+id/rb0"
+            style="@android:style/Widget.Holo.Light.CompoundButton.RadioButton"
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:checked="true"
