--- a/project/app/src/main/res/layout/activity_initial_page.xml
+++ b/project/app/src/main/res/layout/activity_initial_page.xml
@@ -8,6 +8,7 @@
 
     <Button
         android:id="@+id/signin"
+        style="@style/FirebaseUI.Button"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:onClick="onClickSignIn"
