--- a/project/app/src/main/res/layout/fragment_modify.xml
+++ b/project/app/src/main/res/layout/fragment_modify.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar_modify"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="#3872AA"
+        android:background="@color/fui_bgFacebook"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
