--- a/project/app/src/main/res/layout/fragment_search.xml
+++ b/project/app/src/main/res/layout/fragment_search.xml
@@ -34,7 +34,7 @@
             android:id="@+id/result"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#E6DCBE">
+            android:background="#FFFFFF">
 
         </ListView>
     </LinearLayout>
