--- a/project/app/src/main/res/layout/activity_friendlist.xml
+++ b/project/app/src/main/res/layout/activity_friendlist.xml
@@ -25,6 +25,7 @@
         android:name="com.example.groupproject.fragment_search"
         android:layout_width="match_parent"
 
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/fragment_friendlist"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
