--- a/project/app/src/main/res/layout/activity_new_post.xml
+++ b/project/app/src/main/res/layout/activity_new_post.xml
@@ -22,11 +22,10 @@
         android:layout_height="70dp"
         android:layout_marginTop="20px"
         android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="40sp"
         android:text="New Channel"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
 
 
     <LinearLayout
@@ -34,10 +33,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="170dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="vertical"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        app:layout_constraintTop_toTopOf="parent">
+
         <EditText
             android:id="@+id/post_title"
             android:layout_width="wrap_content"
@@ -65,14 +65,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:alpha="@dimen/activity_horizontal_margin"
             android:gravity="center"
             android:text="Choose image from album" />
 
         <ImageView
+            android:id="@+id/image"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/image"/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
