--- a/project/app/src/main/res/layout/post_fav_item.xml
+++ b/project/app/src/main/res/layout/post_fav_item.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:id="@+id/layout_display_fav"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp">
 
         <LinearLayout
             android:layout_width="312dp"
@@ -22,8 +23,15 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="15dp"
                 android:text="Title"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:textStyle="normal" />
+
+            <TextView
+                android:id="@+id/tv_dtc_fav"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="15dp"
+                android:text="dtc" />
 
             <EditText
                 android:id="@+id/tv_content_fav"
@@ -34,14 +42,9 @@
                 android:focusableInTouchMode="false"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
-                android:paddingStart="15dp" />
-
-            <TextView
-                android:id="@+id/tv_dtc_fav"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:minHeight="81dp"
                 android:paddingStart="15dp"
-                android:text="dtc" />
+                android:textSize="24sp" />
 
 
         </LinearLayout>
