--- a/project/app/src/main/res/layout/activity_new_post.xml
+++ b/project/app/src/main/res/layout/activity_new_post.xml
@@ -40,8 +40,11 @@
 
         <EditText
             android:id="@+id/post_title"
-            android:layout_width="wrap_content"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:textStyle="bold"
+            android:textSize="30dp"
             android:ems="10"
             android:hint="Title"
             android:inputType="text"
@@ -50,11 +53,15 @@
         <EditText
             android:id="@+id/post_content"
             style="@android:style/Widget.Holo.Light.EditText"
-            android:layout_width="wrap_content"
-            android:layout_height="150dp"
+            android:layout_width="280dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="60dp"
+            android:textSize="20dp"
+            android:shadowDx="0"
             android:ems="10"
             android:hint="Content"
             android:inputType="textMultiLine"
+            android:gravity="left|top"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_username_modify"
             tools:layout_editor_absoluteY="250dp" />
@@ -64,6 +71,7 @@
             style="@style/FirebaseUI.Button.AccountChooser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="Choose image from album" />
@@ -71,7 +79,8 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="200dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp" />
 
     </LinearLayout>
 
