--- a/project/app/src/main/res/layout/activity_post_display.xml
+++ b/project/app/src/main/res/layout/activity_post_display.xml
@@ -22,9 +22,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="60dp"
+        android:layout_marginBottom="120dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp">
 
 
@@ -33,61 +35,85 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:gravity="center"
+            android:textSize="30dp"
+            android:textStyle="bold"
             android:text="TextView"
             tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="80dp"/>
+            tools:layout_editor_absoluteY="80dp" />
 
         <TextView
             android:id="@+id/post_author"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
+            android:textSize="10dp"
             android:text="TextView"
             tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="150dp"/>
+            tools:layout_editor_absoluteY="150dp" />
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/post_content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
                 android:text="TextView"
+                android:textSize="20dp"
                 tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="210dp"/>
+                tools:layout_editor_absoluteY="210dp" />
+
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="#707070"
+        android:layout_height="30dp"
+        android:layout_marginBottom="30dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_editor_absoluteX="0dp">
-        <Button
+
+        <ImageButton
             android:id="@+id/post_like"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/up_like"
+            android:scaleType="fitCenter"
             android:onClick="toLike"
+            android:background="@android:color/transparent"
             tools:layout_editor_absoluteX="-1dp"
-            tools:layout_editor_absoluteY="665dp"/>
-        <Button
+            tools:layout_editor_absoluteY="665dp" />
+
+        <ImageButton
             android:id="@+id/post_dislike"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/up_dislike"
+            android:scaleType="fitCenter"
             android:onClick="toDislike"
+            android:background="@android:color/transparent"
             tools:layout_editor_absoluteX="-1dp"
             tools:layout_editor_absoluteY="665dp" />
     </LinearLayout>
+    <TextView
+        android:id="@+id/like_display"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
