--- a/project/app/src/main/res/layout/activity_map_points.xml
+++ b/project/app/src/main/res/layout/activity_map_points.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/common_google_signin_btn_text_light_disabled"
     android:orientation="vertical"
     tools:context=".map_points">
 
@@ -11,9 +12,10 @@
         android:id="@+id/toolbar_myPoints"
         android:layout_width="match_parent"
         android:layout_height="66dp"
-        android:background="#3872AA"
+        android:background="@color/fui_bgFacebook"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme"
+        app:title="Collecting" />
 
     <TextView
         android:id="@+id/textView6"
