--- a/project/app/src/main/res/layout/activity_post_display.xml
+++ b/project/app/src/main/res/layout/activity_post_display.xml
@@ -11,10 +11,11 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#3872AA"
+        android:background="@color/fui_bgFacebook"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintTop_toTopOf="parent"
+        app:title="Post"
         tools:layout_editor_absoluteX="0dp" />
 
     <LinearLayout
@@ -35,9 +36,9 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:gravity="center"
+            android:text="TextView"
             android:textSize="30dp"
             android:textStyle="bold"
-            android:text="TextView"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="80dp" />
 
@@ -46,8 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
-            android:textSize="10dp"
             android:text="TextView"
+            android:textSize="10dp"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="150dp" />
 
@@ -88,10 +89,10 @@
             android:id="@+id/post_like"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            app:srcCompat="@drawable/up_like"
-            android:scaleType="fitCenter"
-            android:onClick="toLike"
             android:background="@android:color/transparent"
+            android:onClick="toLike"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/up_like"
             tools:layout_editor_absoluteX="-1dp"
             tools:layout_editor_absoluteY="665dp" />
 
@@ -99,21 +100,21 @@
             android:id="@+id/post_dislike"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            app:srcCompat="@drawable/up_dislike"
-            android:scaleType="fitCenter"
-            android:onClick="toDislike"
             android:background="@android:color/transparent"
+            android:onClick="toDislike"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/up_dislike"
             tools:layout_editor_absoluteX="-1dp"
             tools:layout_editor_absoluteY="665dp" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/like_display"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
-        />
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
