--- a/project/app/src/main/res/layout/activity_post_my.xml
+++ b/project/app/src/main/res/layout/activity_post_my.xml
@@ -11,14 +11,16 @@
         android:id="@+id/toolbar_myPosts"
         android:layout_width="match_parent"
         android:layout_height="66dp"
-        android:background="#3872AA"
+        android:background="@color/fui_bgFacebook"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme"
+        app:title="@string/myPosts" />
 
     <ListView
         android:id="@+id/lv_post_my"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:background="@color/common_google_signin_btn_text_light_disabled">
 
     </ListView>
 
