--- a/project/app/src/main/res/layout/chat_image.xml
+++ b/project/app/src/main/res/layout/chat_image.xml
@@ -3,7 +3,6 @@
     xmlns:Android="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    Android:cardBackgroundColor="#E2CC5D"
     Android:cardElevation="0dp"
     Android:cardMaxElevation="0dp">
 
@@ -26,8 +25,8 @@
         <ImageView
             android:id="@+id/sendPicture"
             android:layout_width="wrap_content"
-            android:maxWidth="200dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:maxWidth="200dp" />
 
         <TextView
             android:id="@+id/sendTime"
