--- a/project/app/src/main/res/layout/chat_location.xml
+++ b/project/app/src/main/res/layout/chat_location.xml
@@ -3,7 +3,6 @@
     xmlns:Android="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    Android:cardBackgroundColor="#E2CC5D"
     Android:cardElevation="0dp"
     Android:cardMaxElevation="0dp">
 
@@ -25,6 +24,7 @@
 
         <Button
             android:id="@+id/locationButton"
+            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="200dp"
