--- a/project/app/src/main/res/layout/activity_channel.xml
+++ b/project/app/src/main/res/layout/activity_channel.xml
@@ -163,49 +163,13 @@
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout11"
+    <fragment
+        android:id="@+id/bottomBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/fui_bgFacebook"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <Button
-            android:id="@+id/friendlist"
-            style="@style/FirebaseUI.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/fui_bgFacebook"
-            android:onClick="toFriendlist"
-            android:text="@string/chats"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/channel"
-            style="@style/FirebaseUI.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/fui_bgFacebook"
-            android:onClick="toChannel"
-            android:text="@string/discover"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/setting"
-            style="@style/FirebaseUI.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/fui_bgFacebook"
-            android:onClick="toSetting"
-            android:text="@string/me"
-            android:textAllCaps="false" />
-
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        android:name="com.example.groupproject.bottom_bar"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
