--- a/project/app/src/main/res/layout/activity_friendlist.xml
+++ b/project/app/src/main/res/layout/activity_friendlist.xml
@@ -10,7 +10,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@color/fui_bgFacebook"
         android:minHeight="?attr/actionBarSize"
         android:scrollbarStyle="outsideOverlay"
@@ -20,68 +20,34 @@
         app:title="@string/chats" />
 
 
-    <fragment
-        android:id="@+id/fragment_search"
-        android:name="com.example.groupproject.fragment_search"
-        android:layout_width="match_parent"
-
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_friendlist"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <fragment
         android:id="@+id/fragment_friendlist"
         android:name="com.example.groupproject.fragment_friendlist"
         android:layout_width="match_parent"
-
-        android:layout_height="577dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent" />
+    <fragment
+        android:id="@+id/fragment_search"
+        android:name="com.example.groupproject.fragment_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+        android:maxHeight="300dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
-    <LinearLayout
-        android:id="@+id/linearLayout10"
+    <fragment
+        android:id="@+id/bottomBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/fui_bgFacebook"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <Button
-            android:id="@+id/friendlist"
-            style="@style/FirebaseUI.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/fui_bgFacebook"
-            android:onClick="toFriendlist"
-            android:text="@string/chats"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/channel"
-            style="@style/FirebaseUI.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/fui_bgFacebook"
-            android:onClick="toChannel"
-            android:text="@string/discover"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/setting"
-            style="@style/FirebaseUI.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/fui_bgFacebook"
-            android:onClick="toSetting"
-            android:text="@string/me"
-            android:textAllCaps="false" />
-
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        android:name="com.example.groupproject.bottom_bar"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
