--- a/project/app/src/main/res/layout/fragment_friendlist.xml
+++ b/project/app/src/main/res/layout/fragment_friendlist.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
+    android:clickable="true"
+    android:onClick="showFriendlist"
     tools:context=".fragment_friendlist">
 
     <!-- TODO: Update blank fragment layout -->
