--- a/project/app/src/main/res/layout/fragment_search.xml
+++ b/project/app/src/main/res/layout/fragment_search.xml
@@ -2,8 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/background_light"
+    android:layout_height="wrap_content"
+    android:clickable="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment_search">
 
@@ -12,11 +12,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/fui_transparent"
         android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:minHeight="40dp"
+        android:background="@android:color/background_light"
         android:layout_height="wrap_content"
         android:hint="Input user's email to search">
 
@@ -31,12 +33,17 @@
     </com.google.android.material.textfield.TextInputLayout>
 
         <ListView
+            android:background="#5f824d"
             android:id="@+id/result"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxHeight="300dp"/>
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FFFFFF">
-
-        </ListView>
+            android:background="@color/fui_transparent"
+            android:onClick="showFriendlist"
+            />
     </LinearLayout>
 
 
