--- a/project/app/src/main/res/layout/fragment_setting.xml
+++ b/project/app/src/main/res/layout/fragment_setting.xml
@@ -26,7 +26,7 @@
         android:background="@drawable/ic_action_name"
         android:text="modify"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout4"
@@ -97,6 +97,24 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout5"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dis_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:hint="Phone" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="97dp"
@@ -108,47 +126,12 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar_setting" />
 
 
-    <LinearLayout
-        android:id="@+id/linearLayout10"
+    <fragment
+        android:id="@+id/bottomBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/fui_bgFacebook"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <Button
-            android:id="@+id/friendlist"
-            style="@style/FirebaseUI.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/fui_bgFacebook"
-
-            android:text="@string/chats"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/channel"
-            style="@style/FirebaseUI.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/fui_bgFacebook"
-
-            android:text="@string/discover"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/setting"
-            style="@style/FirebaseUI.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/fui_ic_anonymous_white_24dp"
-            android:text="@string/me"
-            android:textAllCaps="false" />
-
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        android:name="com.example.groupproject.bottom_bar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
