--- a/project/app/src/main/res/layout/activity_new_post.xml
+++ b/project/app/src/main/res/layout/activity_new_post.xml
@@ -75,30 +75,30 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="#707070"
+        android:layout_height="wrap_content"
+        android:background="@color/fui_bgFacebook"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_editor_absoluteX="0dp">
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/back"
-            style="android:attr/buttonBarButtonStyle"
+            style="@style/FirebaseUI.Button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#707070"
+            android:background="@color/fui_bgFacebook"
             android:onClick="toBack"
             android:text="Back"
             tools:ignore="OnClick" />
 
         <Button
             android:id="@+id/submit"
-            style="android:attr/buttonBarButtonStyle"
+            style="@style/FirebaseUI.Button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#707070"
+            android:background="@color/fui_bgFacebook"
             android:onClick="toSubmit"
             android:text="Submit"
             tools:ignore="OnClick" />
