--- a/project/app/src/main/res/layout/activity_map_main.xml
+++ b/project/app/src/main/res/layout/activity_map_main.xml
@@ -18,41 +18,100 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:context=".map_main" />
 
+
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@color/fui_bgFacebook"
         android:orientation="horizontal"
+        android:layout_marginBottom="0dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_current_map"
             style="@style/FirebaseUI.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="map_GetCurrentLocation"
-            android:text="Location" />
+            android:paddingTop="5dp"
+            android:paddingBottom="30dp"
+            android:background="@color/fui_bgFacebook"
+            app:srcCompat="@drawable/icon_gps"
+            android:scaleType="fitCenter"
+            android:onClick="map_GetCurrentLocation" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_check_map"
             style="@style/FirebaseUI.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingTop="5dp"
+            android:paddingBottom="30dp"
+            android:background="@color/fui_bgFacebook"
             android:onClick="map_CheckPoints"
-            android:text="Check" />
+            app:srcCompat="@drawable/icon_track"
+            android:scaleType="fitCenter" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_pointsList"
             style="@style/FirebaseUI.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingTop="5dp"
+            android:paddingBottom="30dp"
+            android:background="@color/fui_bgFacebook"
             android:onClick="map_listView"
-            android:text="List" />
+            app:srcCompat="@drawable/icon_room"
+            android:scaleType="fitCenter"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout11"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@color/fui_bgFacebook"
+        android:orientation="horizontal"
+        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="Site"
+            android:textAllCaps="false"/>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="Check"
+            android:textAllCaps="false"/>
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="List"
+            android:textAllCaps="false"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
