--- a/project/app/src/main/res/layout/fragment_bottom_bar.xml
+++ b/project/app/src/main/res/layout/fragment_bottom_bar.xml
@@ -11,46 +11,94 @@
     <LinearLayout
         android:id="@+id/linearLayout10"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:background="@color/fui_bgFacebook"
         android:orientation="horizontal"
         android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <ImageButton
             android:id="@+id/friendlist"
             style="@style/FirebaseUI.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingTop="5dp"
+            android:paddingBottom="30dp"
             android:background="@color/fui_bgFacebook"
-            android:onClick="toFriendlist"
-            android:text="@string/chats"
-            android:textAllCaps="false" />
+            app:srcCompat="@drawable/icon_chat"
+            android:scaleType="fitCenter"
+            android:onClick="toFriendlist" />
 
-        <Button
+        <ImageButton
             android:id="@+id/channel"
             style="@style/FirebaseUI.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingTop="5dp"
+            android:paddingBottom="30dp"
             android:background="@color/fui_bgFacebook"
             android:onClick="toChannel"
-            android:text="@string/discover"
-            android:textAllCaps="false" />
+            app:srcCompat="@drawable/icon_explore"
+            android:scaleType="fitCenter" />
 
-        <Button
+        <ImageButton
             android:id="@+id/setting"
             style="@style/FirebaseUI.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingTop="5dp"
+            android:paddingBottom="30dp"
             android:background="@color/fui_bgFacebook"
             android:onClick="toSetting"
-            android:text="@string/me"
-            android:textAllCaps="false" />
+            app:srcCompat="@drawable/icon_person"
+            android:scaleType="fitCenter"/>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout11"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@color/fui_bgFacebook"
+        android:orientation="horizontal"
+        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="@string/chats"
+            android:textAllCaps="false"/>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="@string/discover"
+            android:textAllCaps="false"/>
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="@style/FirebaseUI.Button"
+            android:background="@color/fui_bgFacebook"
+            android:text="@string/me"
+            android:textAllCaps="false"/>
     </LinearLayout>
 
 </FrameLayout>
